--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -3,7 +3,7 @@
 `yt` is developed openly.
 During the Spring of 2017, development transitioned from occurring on [Bitbucket](https://bitbucket.org/yt_analysis/) to [GitHub](https://github.com/yt-project/), and the source code management system was changed from [Mercurial](https://www.mercurial-scm.org/) to [git](https://git-scm.org/).
 Development occurs through the "pull request" model, wherein changes to the codebase are made and then requested to be included in the primary repository.
-Typically, there are two branches of development, and occasionally three.  The first of these is the "stable" branch, which is much slower-paced, and typically only modified during the release periods.
+Typically, there are two branches of development, and occasionally three. The first of these is the "stable" branch, which is much slower-paced, and typically only modified during the release periods.
 The second is that of "main" (formerly "master", which is the conventional term in git terminology, and renamed in early 2021; the corresponding mercurial term would be "default") which is where current development takes place.
 The "main" branch is meant to be for development proceeding that does not drastically disrupt usage patterns.
 Occasionally, such as during the development of `yt` 4.0, a third branch is included in the primary repository.
@@ -49,7 +49,6 @@ The distribution of pull requests as a function of how long it took to close the
 vegaEmbed('#figure-pr-closing-time', "images/pr_times.vl", {"actions": false});
 </script>
 
-
 ### Unit Testing {#sec:unit_testing}
 
 The `yt` codebase includes a number of unit tests; although extensive, their existence post-dates the initial development of the code, and they largely work around the extant APIs at the time of their creation.
@@ -57,7 +56,7 @@ Most modern recommendations for developing scientific software emphasize isolate
 While the development process attempts to emphasize development of isolated APIs and well-constrained unit tests, the balance struck between enabling contribution from junior developers and ensuring the (subjective) standards of the code base does not always fall on the side of rigid design.
 
 Many of the `yt` APIs that are tested require the existence of a "dataset."
-For instance, the testing of whether objects are correctly selected by a sphere selector (which absolutely *could* be tested in isolation, were the APIs more separable) is done via creating several different sets of mock datasets of different organizations and shapes and testing whether or not they correctly choose the data points to be included.
+For instance, the testing of whether objects are correctly selected by a sphere selector (which absolutely _could_ be tested in isolation, were the APIs more separable) is done via creating several different sets of mock datasets of different organizations and shapes and testing whether or not they correctly choose the data points to be included.
 To support these operations, the `yt` testing utilities provide helper functions for creating mock datasets that have different geometric configurations and different collections of "fields" included in their set of primitive values.
 Many of the tests are parameterized against the types and organizations of the datasets, the decomposition across mock processors, and the underlying values of the fields.
 This ensures that we check against errors and bugs that may depend on behavior that varies as the number of processors or the organization of the data changes.
@@ -78,7 +77,7 @@ For processes like surface extraction, this might include ensuring that fixed ra
 For streamlines, it might include computing the analytical solution to an integration along a known vector field.
 And for projections, it would mean that integrating the path with a weight of "one" should result in a uniform set of values equal to the path length across the domain.
 
-At present, the unit tests in `yt` take a considerable amount of time to run, and are using the nosetests framework.  Modern Python practice is to use the newer pytest framework, and efforts are underway to port `yt` to utilize pytest, and in the process, attempt to reduce overall runtime.
+At present, the unit tests in `yt` take a considerable amount of time to run; recent efforts have moved these from using the nosetest framework to utilizing the more modern and supported pytest framework.
 
 ### Answer Testing {#sec:answer_testing}
 
@@ -87,9 +86,9 @@ Because so much of `yt` is focused on computing analysis results, and because so
 
 In general, we allow three different classes of answers, against which we compare results from the current version of the code:
 
- 1. Data values which should not ever change unless an explicit decision is made (i.e., raw data values accessed from on-disk fields)
- 2. Lightly-processed data values which we do not anticipate any deviation from exact, ordered values (i.e., averages, extrema, etc.)
- 3. Higher-level processed values which may differently accumulate error across platforms and architectures but are still within fine-grained ($\equiv 10^{-7}$) tolerance (i.e., images, pixelized projections, etc.)
+1.  Data values which should not ever change unless an explicit decision is made (i.e., raw data values accessed from on-disk fields)
+2.  Lightly-processed data values which we do not anticipate any deviation from exact, ordered values (i.e., averages, extrema, etc.)
+3.  Higher-level processed values which may differently accumulate error across platforms and architectures but are still within fine-grained ($\equiv 10^{-7}$) tolerance (i.e., images, pixelized projections, etc.)
 
 In the first case, we can utilize hashing functions (such as MD5 and SHA) to guarantee consistency across executions.
 Typically, however, we store the full set of values to facilitate easy comparison.
@@ -97,53 +96,55 @@ In the latter two cases, we apply unit-aware relative tolerances.
 This allows for changes in unit assignment to be isolated from changes in value, and furthermore allows minor migration of values.
 A recent incident in which these tests needed to be changed resulted from minor differences as a result of consolidating operations within a loop to conserve memory; the code in question was converted to Cython and the drift was on the scale of $10^{-10}$.
 
-For small-scale answer tests, results are stored in a separate repository that is cloned as a subrepository of the principle ``yt`` repository.
+For small-scale answer tests, results are stored in a separate repository that is cloned as a subrepository of the principle `yt` repository.
 When a new set of answers are needed, they are submitted via pull request, and the changeset hash used for answer validation is updated in the main repository.
-This allows a different cadence, and also enables individuals *not* interested in updating answer values to avoid cloning the subrepository and its full history.
-Larger dataset answers are stored in on our continuous integration servers; a YAML file in the main ``yt`` repository stores the current version number for those answers, which is incremented (via a pull request) when needed.
+This allows a different cadence, and also enables individuals _not_ interested in updating answer values to avoid cloning the subrepository and its full history.
+Larger dataset answers are stored in on our continuous integration servers; a YAML file in the main `yt` repository stores the current version number for those answers, which is incremented (via a pull request) when needed.
 Requiring this clear decision-making process allows for both collaborative discussion and community governance over the degree of answer drift allowed.
+In contrast to the unit tests, answer tests rely on a custom-built legacy plugin that has not been ported to pytest; efforts have stalled to complete this porting, and at the present the answer-testing framework still utilizes the nosetests library.
+This is discussed somewhat further in #sec:future_directions.
 
 ### Code Review
 
 Code review in `yt` is conducted on a line-by-line basis, as well as on a higher-level regarding pull requests.
 The workflow for code review roughly follows this outline:
 
- 1. A pull request is issued.  When a new pull request is issued, a template is provided that includes a description of the change, requesting information about its compliance with coding standards, etc.
- 2. The pull request is automatically marked as unmergeable until a team member applies the correct component label.
- 3. Code is reviewed, line-by-line, and suggestions are made by humans. Code linting, where specific behaviors are identified (such as inconsistent naming, unused variables, unreachable code sections, etc) is automated.
- 4. This process is iterated, ensuring that tests, results accuracy and coding standards are maintained.
+1.  A pull request is issued. When a new pull request is issued, a template is provided that includes a description of the change, requesting information about its compliance with coding standards, etc.
+2.  The pull request is automatically marked as unmergeable until a team member applies the correct component label.
+3.  Code is reviewed, line-by-line, and suggestions are made by humans. Code linting, where specific behaviors are identified (such as inconsistent naming, unused variables, unreachable code sections, etc) is automated.
+4.  This process is iterated, ensuring that tests, results accuracy and coding standards are maintained.
 
 One increasing issue with the code review process is ensuring that changes are reviewed with appropriate urgency; larger pull requests tend to languish without review, as the requirements for review necessarily add burden to the maintainers.
 "Bugfix" changes formally require only one reviewer, whereas the `yt` guidelines suggest that larger changes require review from two different team members.
 
 One of the most pressing bottlenecks with code review is that the time it takes for tests to pass is much longer than the typical time span during which code review takes place.
-Because tests are often required to be run on the *current* version of the code, not the version of the code against which the pull request has been issued, they are often re-initiated following a merge.
+Because tests are often required to be run on the _current_ version of the code, not the version of the code against which the pull request has been issued, they are often re-initiated following a merge.
 This results in a pull request being merged, and then whatever pull request is next to be reviewed has to wait until the tests (now updated with the newly accepted pull request) pass.
-To alleviate this, we have recently begun utilizing the ["auto-merge" feature](https://github.blog/changelog/2021-02-04-pull-request-auto-merge-is-now-generally-available/) provided by GitHub.
+To alleviate this, project maintainers utilize the ["auto-merge" feature](https://github.blog/changelog/2021-02-04-pull-request-auto-merge-is-now-generally-available/) provided by GitHub.
 This allows a maintainer to mark a pull request as "queued" to be merged once a set of requirements -- such as tests passing, approval messages, comment resolution and so forth -- are met.
 By queuing up pull requests for merging, it allows maintainers to mark a set of pull requests as ready to be merged, and then when they meet the appropriate (automated and asynchronous) criteria, they will be merged.
 
 ### Code Styling and Linting
 
-For code included in ``yt``, a set of styles are enforced.
+For code included in `yt`, a set of styles are enforced.
 The term "linting" is used to describe applying automated checks to enforce sytlistic consistency, as well as to flag potential errors that can be detected through static analysis of the code.
 
-We rely on the [``pre-commit``](https://pre-commit.com) framework, which enables automated checks as well as automatic fixes at commit time.
+We rely on the [`pre-commit`](https://pre-commit.com) framework, which enables automated checks as well as automatic fixes at commit time.
 This tool is an opt-in so not every "drive-by" contributor has to learn and install it, but continuous linting is provided by [pre-commit.ci](https://pre-commit.ci) so styling errors cannot slip in.
 
 We configure `pre-commit` to run a mixture of formatters and static checkers.
 The former modify the code in place, while the latter only report errors and so-called "code smells" (such as undefined variables, unused imports, bare `except` statements...) but require human developers fix them.
 
-Our suite of formatter most prominently includes
-[``black``](https://black.readthedocs.io/en/stable/),
-[``isort``](https://pycqa.github.io/isort/) and
-[``pyupgrade``](https://github.com/asottile/pyupgrade).
-``black`` has been designed to maximize readability with as few free parameters as possible
-(In many ways, the fact that most of the ``yt`` code developers did not utilize this style before it was enforced likely enabled its uptake, as it was seen as a choice that "made everyone compromise."),
-while ``isort`` ensures that all ``import`` statements are sorted (according to alphabetical order within a first/second/third-party categorization), and ``pyupgrade`` modernizes some Python idioms according to our minimal support version of the language.
-In particular, ``pyupgrade`` enforces the usage of modern Python ["f-strings"](https://docs.python.org/3/tutorial/inputoutput.html#formatted-string-literals) since we do not support Python version older than 3.6.
+Our suite of formatters most prominently includes
+[`black`](https://black.readthedocs.io/en/stable/),
+[`isort`](https://pycqa.github.io/isort/) and
+[`pyupgrade`](https://github.com/asottile/pyupgrade).
+`black` has been designed to maximize readability with as few free parameters as possible
+(In many ways, the fact that most of the `yt` code developers did not utilize this style before it was enforced likely enabled its uptake, as it was seen as a choice that "made everyone compromise."),
+while `isort` ensures that all `import` statements are sorted (according to alphabetical order within a first/second/third-party categorization), and `pyupgrade` modernizes some Python idioms according to our minimal support version of the language.
+In particular, `pyupgrade` enforces the usage of modern Python ["f-strings"](https://docs.python.org/3/tutorial/inputoutput.html#formatted-string-literals) since we do not support Python version older than 3.6.
 
-For static code analysis we rely on the [``flake8``](https://flake8.pycqa.org/en/latest/) framework.
+For static code analysis we rely on the [`flake8`](https://flake8.pycqa.org/en/latest/) framework.
 Effort is underway to enable using `mypy` for the specialized task of type checking.
 
 All changes that can be applied via automation (specifically, code formatting) are accessible from within the GitHub pull request interface, and are again provided by [pre-commit.ci](https://pre-commit.ci).
@@ -154,7 +155,7 @@ While yt is not necessarily the perfect laboratory for this, as the project as a
 
 ### Type Hinting
 
-Code included in ``yt`` is not required to utilize [type hinting](https://docs.python.org/3/library/typing.html).
+Code included in `yt` is not required to utilize [type hinting](https://docs.python.org/3/library/typing.html).
 However, new contributions are allowed to include type hinting, and work is underway to develop an ontology of types as well as a base set of utilities and types that would be used both internally, and possibly be made available to external package developers.
 
 ### YTEP Process {#sec:ytep}
@@ -169,42 +170,42 @@ Implemented shortly after the first paper on `yt` was released, the YTEP process
 The accepted YTEPs have included implementing the chunking system, developing a units system, removing legacy components, and implementing a code of conduct.
 Below, we include a table of current YTEPs as of this writing.
 
-| Number   | YTEP Title                                            | Created            | Authors                                                             |
-|----------|-------------------------------------------------------|--------------------|---------------------------------------------------------------------|
-| 0001     | IO Chunking                                           | November 26, 2012  | Matthew Turk                                                        |
-| 0002     | Profile Plotter                                       | December 5, 2012   | Matthew Turk                                                        |
-| 0003     | Standardizing field names                             | December 11, 2012  | Casey Stark, Nathan Goldbaum, Matthew Turk                          |
-| 0005     | Octrees for Fluids and Particles                      | December 24, 2012  | Matthew Turk                                                        |
-| 0006     | Periodicity                                           | January 10, 2013   | Matthew Turk, Nathan Goldbaum                                       |
-| 0007     | Automatic Pull Requests' validation                   | February 21, 2013  | Kacper Kowalik                                                      |
-| 0008     | Release Schedule                                      | February 21, 2013  | Matthew Turk                                                        |
-| 0009     | AMRKDTree for Data Sources                            | February 28, 2012  | Sam Skillman                                                        |
-| 0010     | Refactoring for Volume Rendering and Movie Generation | March 3, 2013      | Cameron Hummels                                                     |
-| 0011     | Symbol units in yt                                    | March 7, 2013      | Nathan Goldbaum, Casey Stark, Anna Rosen, Matthew Turk              |
-| 0012     | Halo Redesign                                         | March 7, 2013      | Britton Smith, Cameron Hummels, Chris Moody, Mark Richardson, Yu Lu |
-| 0013     | Deposited Particle Fields                             | April 25, 2013     | Chris Moody, Matthew Turk, Britton Smith, Doug Rudd, Sam Leitner    |
-| 0014     | Field Filters                                         | July 2nd, 2013     | Matthew Turk                                                        |
-| 0015     | Transfer Function Refactor                            | August 13, 2013    | Sam Skillman                                                        |
-| 0016     | Volume Traversal                                      | September 10, 2013 | Matthew Turk                                                        |
-| 0017     | Domain-Specific Output Types                          | September 18, 2013 | Matthew Turk and Anthony Scopatz                                    |
-| 0018     | Changing dict-like access to Static Output            | September 18, 2013 | Matthew Turk                                                        |
-| 0019     | Reduce items in main import                           | October 2, 2013    | Matthew Turk                                                        |
-| 0020     | Removing PlotCollection                               | March 18, 2014     | Matthew Turk                                                        |
-| 0021     | Particle-Only Plots                                   | August 29, 2014    | Andrew Myers                                                        |
-| 0022     | Benchmarks                                            | January 19, 2015   | Matthew Turk                                                        |
-| 0023     | yt Community Code of Conduct                          | July 11, 2015      | Britton Smith                                                       |
-| 0024     | Alternative Smoothing Kernels                         | August 1, 2015     | Bili Dong                                                           |
-| 0025     | The ytdata Frontend                                   | August 31, 2015    | Britton Smith                                                       |
-| 0026     | NumPy-like Operations                                 | September 21, 2015 | Matthew Turk                                                        |
-| 0027     | Non-Spatial Data                                      | December 1, 2015   | Matthew Turk, Nathan Goldbaum, John ZuHone                          |
-| 0028     | Alternative Unit Systems                              | December 8, 2015   | John ZuHone, Nathan Goldbaum, Matthew Turk                          |
-| 0029     | Extension Packages                                    | January 25, 2016   | Matthew Turk                                                        |
-| 0031     | Unstructured Mesh                                     | December 18, 2014  | Matthew Turk                                                        |
-| 0032     | Removing the global octree mesh for particle data     | February 9 2017    | Nathan Goldbaum, Meagan Lang, Matthew Turk                          |
-| 0033     | Dropping Python2 Support                              | November 28, 2017  | Nathan Goldbaum                                                     |
-| 0034     | yt FITS Image Standard                                | September 9, 2018  | John ZuHone                                                         |
-| 0036     | Migrating from nose to pytest                         | September 30, 2019 | Jared Coughlin                                                      |
-| 0037     | Code Styling                                          | May 18, 2020       | Clément Robert                                                      |
-| 1000     | GitHub Migration                                      | March 25, 2017     | Lots of folks                                                       |
-| 1776     | Team Infrastructure                                   | August 24, 2014    | Britton Smith                                                       |
-| 3000     | Let's all start using yt 3.0!                         | October 30, 2013   | Matthew Turk                                                        |
+| Number | YTEP Title                                            | Created            | Authors                                                             |
+| ------ | ----------------------------------------------------- | ------------------ | ------------------------------------------------------------------- |
+| 0001   | IO Chunking                                           | November 26, 2012  | Matthew Turk                                                        |
+| 0002   | Profile Plotter                                       | December 5, 2012   | Matthew Turk                                                        |
+| 0003   | Standardizing field names                             | December 11, 2012  | Casey Stark, Nathan Goldbaum, Matthew Turk                          |
+| 0005   | Octrees for Fluids and Particles                      | December 24, 2012  | Matthew Turk                                                        |
+| 0006   | Periodicity                                           | January 10, 2013   | Matthew Turk, Nathan Goldbaum                                       |
+| 0007   | Automatic Pull Requests' validation                   | February 21, 2013  | Kacper Kowalik                                                      |
+| 0008   | Release Schedule                                      | February 21, 2013  | Matthew Turk                                                        |
+| 0009   | AMRKDTree for Data Sources                            | February 28, 2012  | Sam Skillman                                                        |
+| 0010   | Refactoring for Volume Rendering and Movie Generation | March 3, 2013      | Cameron Hummels                                                     |
+| 0011   | Symbol units in yt                                    | March 7, 2013      | Nathan Goldbaum, Casey Stark, Anna Rosen, Matthew Turk              |
+| 0012   | Halo Redesign                                         | March 7, 2013      | Britton Smith, Cameron Hummels, Chris Moody, Mark Richardson, Yu Lu |
+| 0013   | Deposited Particle Fields                             | April 25, 2013     | Chris Moody, Matthew Turk, Britton Smith, Doug Rudd, Sam Leitner    |
+| 0014   | Field Filters                                         | July 2nd, 2013     | Matthew Turk                                                        |
+| 0015   | Transfer Function Refactor                            | August 13, 2013    | Sam Skillman                                                        |
+| 0016   | Volume Traversal                                      | September 10, 2013 | Matthew Turk                                                        |
+| 0017   | Domain-Specific Output Types                          | September 18, 2013 | Matthew Turk and Anthony Scopatz                                    |
+| 0018   | Changing dict-like access to Static Output            | September 18, 2013 | Matthew Turk                                                        |
+| 0019   | Reduce items in main import                           | October 2, 2013    | Matthew Turk                                                        |
+| 0020   | Removing PlotCollection                               | March 18, 2014     | Matthew Turk                                                        |
+| 0021   | Particle-Only Plots                                   | August 29, 2014    | Andrew Myers                                                        |
+| 0022   | Benchmarks                                            | January 19, 2015   | Matthew Turk                                                        |
+| 0023   | yt Community Code of Conduct                          | July 11, 2015      | Britton Smith                                                       |
+| 0024   | Alternative Smoothing Kernels                         | August 1, 2015     | Bili Dong                                                           |
+| 0025   | The ytdata Frontend                                   | August 31, 2015    | Britton Smith                                                       |
+| 0026   | NumPy-like Operations                                 | September 21, 2015 | Matthew Turk                                                        |
+| 0027   | Non-Spatial Data                                      | December 1, 2015   | Matthew Turk, Nathan Goldbaum, John ZuHone                          |
+| 0028   | Alternative Unit Systems                              | December 8, 2015   | John ZuHone, Nathan Goldbaum, Matthew Turk                          |
+| 0029   | Extension Packages                                    | January 25, 2016   | Matthew Turk                                                        |
+| 0031   | Unstructured Mesh                                     | December 18, 2014  | Matthew Turk                                                        |
+| 0032   | Removing the global octree mesh for particle data     | February 9 2017    | Nathan Goldbaum, Meagan Lang, Matthew Turk                          |
+| 0033   | Dropping Python2 Support                              | November 28, 2017  | Nathan Goldbaum                                                     |
+| 0034   | yt FITS Image Standard                                | September 9, 2018  | John ZuHone                                                         |
+| 0036   | Migrating from nose to pytest                         | September 30, 2019 | Jared Coughlin                                                      |
+| 0037   | Code Styling                                          | May 18, 2020       | Clément Robert                                                      |
+| 1000   | GitHub Migration                                      | March 25, 2017     | Lots of folks                                                       |
+| 1776   | Team Infrastructure                                   | August 24, 2014    | Britton Smith                                                       |
+| 3000   | Let's all start using yt 3.0!                         | October 30, 2013   | Matthew Turk                                                        |
