--- a/content/25.processing_and_analysis.md
+++ b/content/25.processing_and_analysis.md
@@ -50,6 +50,10 @@ Derived fields are an extremely integral component of `yt` and are the gateway t
 In addition, `yt` includes a large number of fields available, many of which are dynamically constructed according to metadata available in the dataset, to jump-start analysis.
 Researchers using `yt` can load a dataset and immediately compute, for instance, the velocity divergence and `yt` will construct the appropriate finite different stencil, fill in any missing zones at the edge of individual boundaries, and return an array that can be accessed, visualized or processed.
 
+`yt` also provides, and utilizes internally, methods for constructing derived fields from "templates."
+For instance, generation of mass fraction fields (as demonstrated above) is conducted internally by `yt` through iterating over all known fields of type density and applying the same function template to them.
+This is applied for quantities such as atomic and molecular species as well as for vector fields, where operators such as divergence and gradient are available through templated field operations.
+
 #### Particle Filters {#sec:particle_filters}
 
 Many of the data formats that `yt` accepts define particles as mixtures of a single set of attributes (such as position, velocity, etc) and then a "type" -- for instance, intermingling dark matter particles with "star" particles.
@@ -141,13 +145,13 @@ The array-like operations utilized in `yt` attempt to map to conceptually simila
 Unlike numpy, however, these utilize `yt`'s dataset-aware "chunking" operations, in a manner philosophically similar to the chunking operations used in the parallel computation library dask.
 Below, we outline the three classes of operations that are available, based on the type of their return value.
 
-#### Reduction to Scalars  {#sec:arrayops-scalar}
+#### Reduction to Scalars {#sec:arrayops-scalar}
 
-Traditional array operations that map from an array to a scalar are accessible utilizing familiar syntax.  These include:
+Traditional array operations that map from an array to a scalar are accessible utilizing familiar syntax. These include:
 
- * `min(field_specification)`, `max(field_specification)`, and `ptp(field_specification)`
- * `argmin(field_specification, axis)`, and `argmax(field_specification, axis)`
- * `mean(field_specification, weight)`, `std(field_specification, weight)`, and `sum(field_specification)`
+- `min(field_specification)`, `max(field_specification)`, and `ptp(field_specification)`
+- `argmin(field_specification, axis)`, and `argmax(field_specification, axis)`
+- `mean(field_specification, weight)`, `std(field_specification, weight)`, and `sum(field_specification)`
 
 In addition to the advantages of allowing the parallelism and memory management be handled by `yt`, these operations are also able to accept multiple fields.
 This allows multiple fields to be queried in a single pass over the data, rather than multiple passes.
@@ -160,7 +164,7 @@ The operations `mean` and `sum` are available here in a non-spatial form, where 
 
 #### Reduction to Vectors {#sec:arrayops-vector}
 
- * `profile(axes, fields, profile_specification)`
+- `profile(axes, fields, profile_specification)`
 
 The `profile` operation provides weighted or unweighted histogramming in one or two dimensions.
 This function accepts the axes along which to compute the histogram as well as the fields to compute, and information about whether the binning should be an accumulation, an average, or a weighted average.
@@ -168,9 +172,9 @@ These operations are described in more detail in **reference profile section**.
 
 #### Remapping Operations {#sec:arrayops-remap}
 
- * `mean(field_specification, weight, axis)`
- * `sum(field_specification, axis)`
- * `integrate(field_specification, weight, axis)`
+- `mean(field_specification, weight, axis)`
+- `sum(field_specification, axis)`
+- `integrate(field_specification, weight, axis)`
 
 These functions map directly to different methods used by the projection data object.
 Both `mean` and `sum`, when supplied a spatial axis, will compute a dimensionally-reduced projection, remapped into a pixel coordinate plane.
