--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -1,4 +1,4 @@
-## Abstracting Simulation Types
+## Abstracting Simulation Types {#sec:abstracting_simulation_types}
 
 ### Chunking and Decomposition Strategies {#sec:chunking}
 
@@ -19,7 +19,7 @@ This chunking type is the most common strategy for parallel-decomposition.
 Necessarily, both indexing and selection methods must be implemented to expose these different chunking interfaces; `yt` utilizes specific methods for each of the primary data types that it can access.
 We detail these below, specifically describing how they are implemented and how they can be improved in future iterations.
 
-### Grid Analysis
+### Grid Analysis {#sec:grid_analysis}
 
 ![The grid structure of the simulation `IsolatedGalaxy`](){#fig:grid_organization}
 
@@ -249,7 +249,7 @@ Where hand-written optimizations for these functions are not available, classes 
 In @tbl:finite_element_types we enumerate the types of finite elements supported at present.
 
 | Type   | # Dims | # Vertices | Description             |
-| -      | -      | -          | -                       |
+| ------ | ------ | ---------- | ----------------------- |
 | `P1`   | 1      | 2          | Linear                  |
 | `P1`   | 2      | 4          | Linear Triangular       |
 | `Q1`   | 2      | 4          | Linear Quadrilateral    |
@@ -265,7 +265,7 @@ Table: Finite element types supported in `yt`. {#tbl:finite_element_types}
 
 To conduct pixelization of a slice or to compute values for volume rendering, `yt` first computes bounding boxes for the individual values.
 Once a pixel has been identified as being "within" a particular element (which also takes into account the shape of higher-order elements, rather than assuming a flat set of planes) the pixelizer has to compute the value at that location.
-In order to compute intra-element values at a position $(x, y, z)$ the position within a *reference* element $(x', y', z')$ must first be computed, and then the value solved for given the values at the vertices.
+In order to compute intra-element values at a position $(x, y, z)$ the position within a _reference_ element $(x', y', z')$ must first be computed, and then the value solved for given the values at the vertices.
 This is conducted within the function `sample_at_real_point`, which is defined for each `ElementMapper`.
 
 ![Example of a finite element mesh with higher-order tetrahedral elements, including a zoom-in on one of the elements](images/fem_example.png){#fig:finite_element_higher_order}
@@ -282,7 +282,7 @@ As is clearly visible in the second plot, `yt` is applying higher-order methods 
 In Section @sec:abstraction-coordinates, we describe the relationship between the internal 'index' space that `yt` uses for referencing values and the natural 'data' space that the values represent.
 The abstraction of the coordinate systems and the relationship between index-space and data-space provides the ability to convert between the two; however, constructing visualizations and annotations requires an additional level of complexity.
 
-The single most important shortcoming in the analysis of non-cartesian datasets in `yt` is that the data selection operators almost exclusively function on the coordinates in *index* space, rather than in *data* space.
+The single most important shortcoming in the analysis of non-cartesian datasets in `yt` is that the data selection operators almost exclusively function on the coordinates in _index_ space, rather than in _data_ space.
 As such, subselecting datasets by utilizing traditional geometric selectors in `yt` is much less useful than it should be; for example, selecting a sphere (see @sec:dobj-sphere) applies spherical selections in index space, which result in a decidedly non-spherical object.
 Selections of objects such as @sec:dobj-region do make considerably more sense, however, as they are often thought of as sweeping data along coordinate axes; the region object itself will naturally select wedges in a spherical domain, for instance.
 Future versions of `yt` will likely introduce means of more clearly selecting objects in coordinate space, for more natural subsetting of data.
