--- a/content/68.future_directions.md
+++ b/content/68.future_directions.md
@@ -1,4 +1,4 @@
-## Future Directions
+## Future Directions {#sec:future_directions}
 
 - More integration with _in situ_ analysis systems like `libyt`
 - Much improved optimization
